# argux

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
argux/: Makefile.am  argux.c  client.c  client.h  shell.c
argux/shell/: help.c  list.c  list.h  register.c
arguxd/: Makefile.am  acl.c  acl.h  argux.c  command.c  command.h  db.c  db.h  fqdn.c  fqdn.h  rest-server.c  rest-server.h  role.c  role.h  scheduler.c  scheduler.h  session.c  session.h  settings.c  settings.h  util.c  util.h  worker.c  worker.h
arguxd/command/: connect.c  connect.h
data/: Makefile.am  argux.conf
data/schema/: Makefile.am  sqlite3.schema
docs/: Makefile.am
docs/libargux/: Makefile.am  libargux.conf
docs/man/: Makefile.am  argux.1.in  argux.conf.5.in  arguxd.1.in  libargux.3.in
libargux/: Makefile.am  assert.c  assert.h  error.c  error.h  host.h  item.c  item.h  itemtype.h  libargux.c  libargux.h  log.c  log.h  memory.c  memory.h  metric.c  metric.h  ns.h  plugin-db.c  plugin-db.h  plugin.c  plugin.h  principal.c  principal.h  rest-server.c  rest-server.h  session.c  session.h  slist.c  slist.h  types.h  value.c  value.h
plugins/: Makefile.am
plugins/pgsql-db-plugin/: Makefile.am  db.c  db.h  host.c  host.h  metric.c  metric.h  ns.c  ns.h  plugin.c
plugins/sqlite3-db-plugin/: Makefile.am  db.c  db.h  host.c  host.h  metric.c  metric.h  ns.c  ns.h  perm.c  perm.h  plugin.c  principal.c  principal.h  value.c  value.h
tests/: Makefile.am
tests/argux/: Makefile.am
tests/db-plugins/: Makefile.am  pgsql-db-connect.sh  pgsql-db-plugin.symbols  pgsql-symbols.sh  plugin-loader.c  sqlite3-db-connect.sh  sqlite3-db-host.sh  sqlite3-db-ns.sh  sqlite3-db-perm.sh  sqlite3-symbols.sh
tests/libargux/: Makefile.am  libargux-helper.c
